[!] Bug: Login page was not centered properly.

--- a/src/skins/admin/en/login/style.css
+++ b/src/skins/admin/en/login/style.css
@@ -13,6 +13,7 @@
 div.login-page {
   width: 960px !important;
   margin: 0 auto;
+  position: static !important;
 }
 
 div.login-page #header .logo {
